<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/mov_option_img"
        android:layout_width="@dimen/image_200"
        android:layout_height="@dimen/image_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/doctor" />

    <TextView
        android:id="@+id/mov_option_reason"
        style="@style/text_18_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mov_option_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mov_option_img" />

    <TextView
        android:id="@+id/mov_option_desc"
        style="@style/text_18_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mov_option_desc"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mov_option_reason" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mov_option_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_54"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/mov_option_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/mov_option_desc"
        app:layout_constraintStart_toStartOf="@id/mov_option_desc"
        app:layout_constraintTop_toBottomOf="@id/mov_option_desc" />

    <TextView
        android:id="@+id/mov_option_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_5"
        android:paddingTop="@dimen/dimen_20"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_5"
        android:gravity="center"
        android:text="@string/mov_option_verify"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mov_option_button" />

</androidx.constraintlayout.widget.ConstraintLayout>