<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.MovementActivity">

    <ImageView
        android:id="@+id/about"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/about_app"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menoume_spiti_img"
        android:layout_width="@dimen/image_100"
        android:layout_height="@dimen/image_100"
        android:layout_marginTop="@dimen/dimen_15"
        android:src="@drawable/menoume_spiti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menoume_spiti_header"
        style="@style/text_18_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="@color/navy_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menoume_spiti_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:hint="@string/fullName"
        android:paddingStart="@dimen/dimen_15"
        android:paddingEnd="@dimen/dimen_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menoume_spiti_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:padding="@dimen/dimen_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/data_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/saveData"
        app:layout_constraintEnd_toEndOf="@id/address_field"
        app:layout_constraintTop_toBottomOf="@id/address_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_screen_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_54"
        android:layout_margin="@dimen/dimen_15"
        android:text="@string/btn_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>